--- a/sass/_collection.scss
+++ b/sass/_collection.scss
@@ -1,7 +1,7 @@
 @mixin m-collection($img-path){
 	background-image: url($img-path);
 	margin-top: 25px;
-	height: 25vh;
+	height: 30vh;
     background-size: cover;
     	h3{
     		    padding-top: 15%;
@@ -12,15 +12,43 @@
     	
 	}
 
+.collection-list{
+
+	display: flex;
+	justify-content:space-between;
+}
 .collection{
+	h5{
+	font-size:25px;
+	}
+	@include fuente("pt serif", sans-serif);
+	width:32%;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    color:white;
+
 	@include m-collection("../assets/home-feature-4.png");
 	}	
 
 .collection-bottom{
-	background-color:blue;
+
+	padding: 35px 0;
+	margin-top: 10px;
+	width:32%;
+	background-color:#94a0b0;
 	color:white;
 	text-transform: uppercase;
 	text-align: center;
+	p{
+		margin-bottom: 0px;
+	}
 }
 
+.collection-bottom:first-child{
+	background-color: #b7bcc2;
+}
 
+.collection-bottom:last-child{
+	background-color: #d1c4b4;
+}
