--- a/sass/_moda.scss
+++ b/sass/_moda.scss
@@ -1,18 +1,34 @@
 
 
+
 .feature{
+	display: flex;
+    justify-content: space-between;
 	
 	@mixin m-moda($img-path){
 	background-image: url($img-path);
 	margin-top: 25px;
-	height: 60vh;
+	height: 40vh;
     background-size: cover;
+    width: 49%;
+    padding-left: 30px;
+    padding-bottom: 24px;
+    color:white;
     	h3{
-    		    padding-top: 15%;
-		    color: white;
-		    padding-bottom: 24px;
-		    padding-left: 20px;
+    		padding-top: 15%;
+    		padding-bottom: 20px;
+		   
+		      
+		    @include fuente("pt serif", sans-serif);
 		}
+	p{
+		font-size: 10px;
+    letter-spacing: 1px;
+
+	}
+		
+
+		
     	
 	}
 
@@ -21,6 +37,7 @@
 	}	
 	.moda-right{
 		@include m-moda("../assets/home-feature-5.png");
+		padding-left: 30px;
 	}	
 
 }
