--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,16 +1,81 @@
+body{
+	font-family: "Open Sans", serif;
+	border-sizing:border-box;
+	
+}
+
 img{
 		width: 100%;
 		}
 
+section{
+	padding-bottom: 4%;
+}
 .raya{
 	height:1px;
-	background-color: grey;
+	background-color: #e5e5e5;
+
 }
 
+
+@mixin fuente($estilo, $serif){
+	font-family: $estilo, $serif;
+}
+
+.title{
+	color:#aaaaaa;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	font-size: 15px;
+    @include fuente("Open Sans", serif);
+}
+
+.active{
+	
+	 .subtitle{
+	 @include fuente("open sans", serif);
+	color:#4d99bb;
+	font-weight: bold;}
+	
+	.last{
+		color:black;
+	}
+
+}
+
+.menu-left{
+	padding-left: 10px;
+	a{
+		@include fuente("Open Sans", serif);
+		color:black;
+	}
+	
+}
+
+.carousel-caption{
+	left: 15%;
+    right: auto;
+    bottom: 25%;
+    text-align: left;
+
+    p{
+    	text-transform: uppercase;
+    	font-size:  20px; 
+    	@include fuente("Open Sans", serif);  }
+
+    h3{
+    	font-size: 50px;
+    	font-weight: bold;
+    	@include fuente("pt serif", sans-serif);
+    	letter-spacing: 1px;
+    }
+}
 @import '_header.scss';
 
 @import '_moda.scss';
 
 @import '_featured-products.scss';
+
+@import '_news.scss';
 
 @import '_collection.scss';
