--- a/sass/main.scss
+++ b/sass/main.scss
@@ -70,6 +70,14 @@ section{
     	letter-spacing: 1px;
     }
 }
+
+.autumn-styles{
+	display: none;
+}
+
+.shop-mobile{
+	display:none;
+}
 @import '_header.scss';
 
 @import '_moda.scss';
@@ -79,3 +87,7 @@ section{
 @import '_news.scss';
 
 @import '_collection.scss';
+
+@import '_footer.scss';
+
+@import '_media.scss';
