--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,27 +1,20 @@
 body{
 	font-family: "Open Sans", serif;
 	border-sizing:border-box;
-	
 }
-
 img{
-		width: 100%;
-		}
-
+	width: 100%;
+}
 section{
 	padding-bottom: 4%;
 }
 .raya{
 	height:1px;
 	background-color: #e5e5e5;
-
 }
-
-
 @mixin fuente($estilo, $serif){
 	font-family: $estilo, $serif;
 }
-
 .title{
 	color:#aaaaaa;
 	letter-spacing: 1px;
@@ -29,40 +22,33 @@ section{
 	font-size: 15px;
     @include fuente("Open Sans", serif);
 }
-
-.active{
-	
-	 .subtitle{
-	 @include fuente("open sans", serif);
+.active{	
+	.subtitle{
+	@include fuente("open sans", serif);
 	color:#4d99bb;
-	font-weight: bold;}
-	
+	font-weight: bold;
+	}
 	.last{
 		color:black;
 	}
-
 }
-
 .menu-left{
 	padding-left: 10px;
 	a{
 		@include fuente("Open Sans", serif);
 		color:black;
 	}
-	
 }
-
 .carousel-caption{
 	left: 15%;
     right: auto;
     bottom: 25%;
     text-align: left;
-
     p{
     	text-transform: uppercase;
     	font-size:  20px; 
-    	@include fuente("Open Sans", serif);  }
-
+    	@include fuente("Open Sans", serif);
+    }
     h3{
     	font-size: 50px;
     	font-weight: bold;
@@ -70,14 +56,13 @@ section{
     	letter-spacing: 1px;
     }
 }
-
 .autumn-styles{
 	display: none;
 }
-
 .shop-mobile{
 	display:none;
 }
+
 @import '_header.scss';
 
 @import '_moda.scss';
